# ankaa

./: .env.prod.example  .gitignore  LICENSE  README.md  build_images.sh  docker-compose.prod.yml  docker-compose.yml  mix.exs
.github/workflows/: ci.yml  deploy.yml  test.yml
.mosquitto/config/: mosquitto.config
ankaa_beacon/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  fly.toml  mix.exs
ankaa_beacon/assets/: package-lock.json  package.json
ankaa_beacon/assets/js/: app.ts
ankaa_beacon/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
ankaa_beacon/lib/: ankaa_beacon.ex  ankaa_beacon_web.ex  ankaa_web.ex
ankaa_beacon/lib/ankaa/: accounts.ex  application.ex  mailer.ex  mock_data.ex  notifications.ex  (+3 more)
ankaa_beacon/rel/: env.sh.eex
ankaa_beacon/test/: redis_test.exs  test_helper.exs
ankaa_frontend/: package-lock.json  package.json
assets/: tailwind.config.js
config/: config.exs  dev.exs  runtime.exs
iot_mock/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml
iot_mock/src/: main.rs
lib/: ankaa.ex  ankaa_web.ex
lib/ankaa/: application.ex  longterm.ex  mailer.ex  mock_data.ex  notifications.ex  redis.ex  redis_test.ex  repo.ex  timescale_repo.ex
lib/ankaa_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
mosquitto/config/: mosquitto.conf
terraform/aws/: acm.tf  alb.tf  budget.tf  database.tf  dns.tf  ec2.tf  iam.tf  iot.tf  provider.tf  registry.tf  route53.tf  security_groups.tf  variables.tf  vpc.tf
test/: mock_data_test.exs  test_helper.exs
test/support/: conn_case.ex  data_case.ex
(+283 files in other folders)
