[package]
name = "iot_mock"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.21.0"  # MQTT client
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8.0"  # For generating random data
chrono = { version = "0.4.0", features = ["serde"] }  # For timestamps